--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +13,104 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  font-size: 6.2rem;
+}
+
+p {
+  font-size: 1.7rem;
+}
+
+
+.app {
+  background-color: rgba(0, 0, 0, 0.5);
+  height: 100vh;
+  width: 100%;
+  color: #fff;
+  position: relative;
+}
+
+.app .search {
+  text-align: center;
+}
+
+.app input {
+  padding: 0.8rem 1.6rem;
+  font-size: 1.3rem;
+  color: white;
+  border-radius: 25px;
+  border: 1px solid rgba(255, 255, 255, 0.7);
+  background: rgba(255, 255, 255, 0.2);
+}
+
+::placeholder {
+  color: white;
+}
+
+.app:before {
+  height: 100%;
+  content: '';
+  position: absolute;
+  background: url('https://picsum.photos/1000/1000') no-repeat center center/cover;
+  left: 0;
+  width: 100%;
+  z-index: -1;
+  top: 0;
+}
+
+
+.container {
+  max-width: 700px;
+  height: 700px;
+  margin: auto;
+  padding: 0 1rem;
+  position: relative;
+  top: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.app .mainWeather {
+  margin: 1rem auto;
+}
+
+.app .description {
+  position: relative;
+  margin-left: 320px;
+  left: 170px;
+  bottom: 170px;
+}
+
+.app .icon {
+  position: relative;
+  left: 300px;
+  bottom: 110px;
+
+}
+
+.app .detailWeather {
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+  width: 120%;
+  margin: 1rem auto;
+  padding: 1rem;
+  border-radius: 12px;
+  background-color: rgba(255, 255, 255, 0.3);
+  margin-bottom: 20px;
+  margin-left: -50px;
+}
+
+.bold {
+  font-weight: 700;
+}
+
+.location {
+  text-align: center;
+  margin-top: -50px;
+  box-sizing: content-box;
+
+  padding-bottom: 30px;
+  padding-top: 50px;
 }
